--- a/reports/comentarios-e-cultura.Rmd
+++ b/reports/comentarios-e-cultura.Rmd
@@ -10,6 +10,7 @@ theme: sandstone
 library(tidyverse)
 library(here)
 library(viridis)
+library(GGally)
 source(here::here("code/import_data.R"))
 theme_set(theme_bw())
 
@@ -54,7 +55,8 @@ dados %>%
 ```
 
 Podemos observar pela visualização acima, ao analisar a distribuição dos pontos em torno do eixo x e y, que a relação entre a proporção de comentários feitos por um país e o quão hierárquicas são as relações desse país é linear, moderada e negativa, pois é possível ver que quanto maior é a proporção dos comentários, menos hierárquicas são as relações deste país.
-Ao considerar o quanto as pessoas do país têm acesso à Internet e a quantidade de usuários presentes na base de dados, que são representados no gráfico acima pela cor e tamanho do ponto, respectivamente. Vemos que, existe um aumento no percentual de acesso à Internet quando a proporção de comentários aumenta e o país tem um baixo PDI. E, analisando a quantidade de usuários na base de dados, observamos que, em geral, em um país quando se tem um maior percentual de acesso á Internet o número de usuários da base de dados é maior, a proporção de comentários desse país é maior e as relações desse país são menos hierárquicas. Além disso, é possível observar, que nos países em que o número de usuários na bases de dados coletada é menor, a proporção de comentários também é menor e eles possuem relações mais hierárquicas.
+
+Ao considerar o quanto as pessoas do país têm acesso à Internet e a quantidade de usuários presentes na base de dados, que são representados no gráfico acima pela cor e tamanho do ponto, respectivamente. Vemos que, existe um aumento no percentual de acesso à Internet quando a proporção de comentários aumenta e o país tem um baixo PDI. E, analisando a quantidade de usuários na base de dados, observamos que, em geral, em um país quando se tem um maior percentual de acesso á Internet o número de usuários da base de dados é maior, a proporção de comentários desse país é maior e as relações desse país são menos hierárquicas. Além disso, é possível observar que nos países em que o número de usuários na bases de dados coletada é muito pequeno, a proporção de comentários também é menor e eles possuem relações mais hierárquicas.
 
 ## Outras formas de ver
 
@@ -69,8 +71,7 @@ dados %>%
     labs(x = "Proporção de comentários", y = "PDI", title = "Relação entre a proporção de comentários\ne o quão hierárquicas são as relações em um país", color = "Quantidade de Usuários", size = "Acesso à Internet")
 ```
 
-Nessa primeira visualização acima, foi utilizado o tamanho do ponto para representar o quanto as pessoas de um país tem acesso á Internet e a cor para o número de usuários da base de dados, e podemos ver que, fica bem difícil de analisar essas variáveis na relação entre a proporção de comentários dos usuários e as relações hierárquicas dos países pois a distribuição do número de usuários da bases de dados tem muitos valores pequenos.
-
+Nessa primeira visualização acima, foi utilizado o tamanho do ponto para representar o quanto as pessoas de um país tem acesso á Internet e a cor para o número de usuários da base de dados, e podemos ver que, fica bem difícil de analisar essas variáveis na relação entre a proporção de comentários dos usuários e as relações hierárquicas dos países pois a distribuição do pontos do número de usuários da bases de dados tem valores bem próximos.
 
 ```{r}
 dados %>% 
@@ -81,7 +82,7 @@ dados %>%
     labs(x = "Proporção de comentários", y = "PDI", title = "Relação entre a proporção de comentários\ne o quão hierárquicas são as relações em um país", color = "Acesso à Internet", size = "Quantidade de Usuários")
 ```
 
-Nessa segunda visualização acima, foi utilizado outra escala de cores para a proporção do acesso à Internet, e observamos que essa escala é boa para representar variáveis qualitativas nominais, que não é caso desses dados, então por isso, ness gráfico é mais difícil de analisar o acesso à Internet na relação entre a proporção de comentários dos usuários e as relações hierárquicas dos países.
+Nessa segunda visualização acima, foi utilizado outra escala de cores para a proporção do acesso à Internet, e observamos que essa escala é boa para representar variáveis qualitativas nominais, que não é caso desses dados, então por isso, nesse gráfico é mais difícil de analisar o acesso à Internet na relação entre a proporção de comentários dos usuários e as relações hierárquicas dos países.
 
 ```{r}
 dados %>% 
@@ -101,15 +102,17 @@ dados %>%
     labs(x = "Proporção de comentários", y = "PDI", title = "Relação entre a proporção de comentários\ne o quão hierárquicas são as relações em um país", color = "Acesso à Internet", size = "Quantidade de Usuários")
 ```
 
-Nessa quarta visualização foi utilizado a função geom_jitter, que também pode ser utilizada para analisar a distriibuição dos pontos, porém ele adiciona uma pequena quantidade de variação aleatória ao local de cada ponto. Com essas modificações é possível observar que fica muito mais difícil de ver uma relação entre a proporção de comentários dos usuários e as relações hierárquicas dos países.
+Nessa quarta visualização foi utilizado a função geom_jitter, que também pode ser utilizada para analisar a distribuição dos pontos, porém ela adiciona uma pequena quantidade de variação aleatória ao local de cada ponto. Com essas modificações é possível observar que fica muito mais difícil de ver uma relação entre a proporção de comentários dos usuários e o quão hierárquicas são as relações dos países.
 
 ```{r}
 dados %>% 
-    ggplot(aes(x = reorder(comentaram_prop, PDI), y = PDI, color = Internet, size = usuarios)) +
+    ggplot(aes(x = reorder(PDI, comentaram_prop), y = comentaram_prop, color = Internet, size = usuarios)) +
     geom_point()+
     scale_colour_distiller(palette="YlOrRd") +
-    labs(x = "Proporção de comentários", y = "PDI", title = "Relação entre a proporção de comentários\ne o quão hierárquicas são as relações em um país", color = "Acesso à Internet", size = "Quantidade de Usuários")
+    labs(x = "PDI", y = "Proporção de comentários", title = "Relação entre a proporção de comentários\ne o quão hierárquicas são as relações em um país", color = "Acesso à Internet", size = "Quantidade de Usuários")
 ```
+
+Na quinta visualização acima, foi ordenado a variável PDI por proporção de comentários, a distribuição dos pontos em torno dos eixos x e y ficou melhor, porém dificultou a visualização dos valores da escala do eixo x (PDI).
 
 ## Bônus
 
@@ -125,3 +128,6 @@ dados %>%
     facet_wrap(~six_regions, scales="free", ncol = 2) +
     labs(x = "Proporção de comentários", y = "PDI", title = "Relação entre a proporção de comentários\ne o quão hierárquicas são as relações em um país", color = "Acesso à Internet", size = "Quantidade de Usuários")
 ```
+
+
+A visualização acima mostra uma forma de analisar a relação entre as variáveis pelo continente dos países.
